--- a/index.html
+++ b/index.html
@@ -2,5 +2,5 @@
 
 <p>this is a new feature yayaay (dropdown)</p>
 
-<p>this is a new feature yayaay (button)</p>
+<p>this is a new feature yay (button)</p>
 
